--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,8 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'adopt'
-          java-package: 'jdk'
-          architecture: 'x64'
-          check-latest: false
+          distribution: 'temurin'
+          cache: maven
 
       - name: Build with Maven
         run: mvn clean install
