--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -e -X
 
       - name: Run tests
-        run: mvn test
+        run: mvn test -e -X
