--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
+					<testSourceDirectory>src/test/java</testSourceDirectory>
 					<source>17</source>
 					<target>17</target>
 				</configuration>
@@ -131,7 +132,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.1.2</version>
+				<version>3.5.1</version>
 				<configuration>
 					<useModulePath>false</useModulePath>
 				</configuration>
